[gd_scene load_steps=2 format=2]

[ext_resource path="res://TestHUD.gd" type="Script" id=1]

[node name="TestHUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="LabelXYZ" type="Label" parent="."]
margin_left = 20.0
margin_top = 632.0
margin_right = 179.0
margin_bottom = 663.0
text = "Input X, Y, Z for direction
(will be normalized)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelMag" type="Label" parent="."]
margin_left = 276.0
margin_top = 632.0
margin_right = 435.0
margin_bottom = 663.0
text = "Input vector magnitude
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelInstruction" type="Label" parent="."]
margin_left = 882.0
margin_top = 632.0
margin_right = 1255.0
margin_bottom = 663.0
text = "Hit Enter to add vector to shot. Then press Space to shoot!
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spnX" type="SpinBox" parent="."]
margin_left = 12.0
margin_top = 672.0
margin_right = 86.0
margin_bottom = 696.0
min_value = -1.0
max_value = 1.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spnY" type="SpinBox" parent="."]
margin_left = 92.0
margin_top = 672.0
margin_right = 166.0
margin_bottom = 696.0
min_value = -1.0
max_value = 1.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spnZ" type="SpinBox" parent="."]
margin_left = 172.0
margin_top = 672.0
margin_right = 246.0
margin_bottom = 696.0
min_value = -1.0
max_value = 1.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spnMag" type="SpinBox" parent="."]
margin_left = 316.0
margin_top = 672.0
margin_right = 390.0
margin_bottom = 696.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 882.0
margin_top = 664.0
margin_right = 978.0
margin_bottom = 696.0
text = "Current value: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelCurrentVec" type="Label" parent="."]
margin_left = 986.0
margin_top = 664.0
margin_right = 1090.0
margin_bottom = 688.0
text = "0.0, 0.0, 0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnClear" type="Button" parent="."]
margin_left = 1162.0
margin_top = 656.0
margin_right = 1258.0
margin_bottom = 676.0
text = "Clear Vector"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnImportLevel" type="Button" parent="."]
margin_left = 14.0
margin_top = 15.0
margin_right = 96.0
margin_bottom = 35.0
text = "Import CSV height map"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dlgImportLevel" type="FileDialog" parent="."]
margin_left = 279.0
margin_top = 81.0
margin_right = 760.0
margin_bottom = 470.0
window_title = "Open a File"
mode = 0
filters = PoolStringArray( "*.csv" )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="btnClear" to="." method="clear_vec"]
[connection signal="pressed" from="btnImportLevel" to="." method="_on_btnImportLevel_pressed"]
[connection signal="file_selected" from="dlgImportLevel" to="." method="_on_dlgImportLevel_file_selected"]
